# daglite

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  DOCUMENTATION_IMPROVEMENTS.md  IMPROVEMENTS.md  LICENSE  README.md  REVIEW_FINDINGS.md  codecov.yml  index.html  mkdocs.yml  pyproject.toml  test01.py  test02.py  test03.py  test04.py  test_concurrency_limit.py  test_cycle.py  test_errors.py  test_global_pool.py  test_pool_size_respect.py  test_simple_global.py  zensical.toml
.github/workflows/: docs-check.yml  docs-deploy.yml  docs-preview-fork.yml  docs-preview.yml  docs.yml  linting.yaml  release.yml  testing.yaml
api-reference/settings/: index.html
api-reference/tasks/: index.html
api-reference/workflows/: index.html
design/: event-loop-alternatives.md
docs/: examples.md  getting-started.md  index.md  zensical-viability-assessment.md
docs/api-reference/: backend.md  composers.md  datasets.md  engine.md  exceptions.md  futures.md  index.md  logging.md  pipelines.md  sessions.md  settings.md  tasks.md  workflows.md
docs/design/: async-first-engine-refactoring.md  caching-and-checkpointing-design.md  caching-checkpointing-overhaul.md  caching-checkpoints-overhaul-plan.md  claude-code-quickstart.md  test-suite-organization-review.md
docs/examples/: data-processing.md  etl-pipeline.md  index.md  ml-workflow.md
docs/getting-started/: build-task.md  build-workflow.md  installation.md  run-workflow.md
docs/migration-focus/: api-reference-strategy.md  authoring-standards.md  index.md  information-architecture.md  publishing-workflow.md
docs/plugins/: built-in.md  cli.md  creating.md  index.md  rich.md  serialization.md
docs/user-guide/: backends.md  cli.md  composers.md  composition.md  datasets.md  evaluation.md  fluent-api.md  pipelines.md  sessions.md  streaming.md  tasks.md  workflows.md
examples/: basic.py
examples/data-processing/: index.html
examples/etl-pipeline/: index.html
examples/nyc_taxi/: README.md  pipeline.py  requirements.txt
extras/cli/: pyproject.toml
extras/cli/src/daglite_cli/: __init__.py  base.py  cmd_run.py  utils.py
extras/cli/tests/: test_base.py  test_run.py
extras/cli/tests/examples/: __init__.py  pipelines.py
extras/serialization/: README.md  pyproject.toml
extras/serialization/daglite-serialization/: README.md  pyproject.toml
extras/serialization/daglite-serialization/src/daglite_serialization/: __init__.py  numpy.py  pandas.py  pillow.py
extras/serialization/daglite-serialization/tests/: test_serialization_plugin.py
extras/serialization/src/daglite_serialization/: __init__.py  numpy.py  pandas.py  pillow.py
extras/serialization/tests/: test_serialization_plugin.py
extras/viz/: README.md  example.py  pyproject.toml
extras/viz/src/daglite_viz/: __init__.py  visualize.py
extras/viz/tests/: test_visualize.py
graphlite/: __init__.py  combinators.py  context.py  executor.py  expr.py  task.py  utils.py
protos/: test01.py  test02.py  test03.py  test04.py  test04_threading.py  test_concurrency_limit.py  test_cycle.py  test_errors.py  test_global_pool.py  test_pool_size_respect.py  test_simple_global.py
tests/: conftest.py  test_cache.py  test_composers.py  test_composite_node.py  test_context.py  test_coverage_backends.py  test_coverage_misc.py  test_coverage_tasks.py  test_datasets.py  test_eager.py  test_evaluation.py  test_futures.py  test_graph.py  test_graphlite.py  test_integration.py  test_iter_future.py  test_key_validation.py  test_load_dataset.py  test_logging.py  test_map_index_and_parent.py  test_mapping.py  test_optimizer.py  test_parallel.py  test_pipeline.py  test_processors.py  test_reduce_future.py  test_reduce_node.py  test_resolvers.py  test_save_outputs.py  test_serialization.py  test_session.py  test_settings.py  test_tasks.py  test_tasks_futures.py  test_templates.py  test_workflow.py  test_workflows.py
writeups/: ARCHITECTURE_REVIEW_V2.md  DOCS_SETUP.md  README.md
(+308 files in other folders)
