# --- build system ---

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# --- project & dependencies ---

[project]
dependencies = ["click>=8.0", "daglite"]

name = "daglite-cli"
description = "CLI application for Daglite."
dynamic = ["version"]
readme = "README.md"


[project.scripts]
daglite = "daglite_cli.base:cli"

# --- tool.setuptools ---

[tool.setuptools.dynamic.version]
attr = "daglite_cli.__version__"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"daglite_cli" = ["py.typed"]
